# disksense64

./: .clang-format  .editorconfig  .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  LICENSE  README.es.md  README.md  SUMMARY.md  build.sh  build_and_test.sh  build_complete.sh  build_crossplatform.sh  build_project.sh  build_simple.sh  verify_installation.sh  version.h
.github/scripts/: clang_tidy.sh  format_check.sh
.github/workflows/: ci-core.yml  ci-gui.yml  ci.yml  format.yml  nightly.yml  release.yml  tidy.yml
DiskSense64/: DiskSense64.config  PROJECT_SUMMARY.md  README.md
apps/DiskSense.Cli/: CMakeLists.txt  main.cpp
apps/DiskSense.Gui/: CMakeLists.txt  main.cpp  qtreemap.cpp  qtreemap.h
apps/DiskSense.Gui/components/: resultsdisplay.cpp  resultsdisplay.h  sunburstwidget.cpp  sunburstwidget.h  treemapwidget.cpp  treemapwidget.h  visualizationwidget.cpp  visualizationwidget.h
apps/DiskSense.Gui/ui/: advancedfilterwidget.cpp  advancedfilterwidget.h  automationdialog.cpp  automationdialog.h  comparisondialog.cpp  comparisondialog.h  dashboardtab.cpp  dashboardtab.h  exportdialog.cpp  exportdialog.h  fileexplorer.cpp  fileexplorer.h  mainwindow.cpp  mainwindow.h  networkdialog.cpp  networkdialog.h  onboardingdialog.cpp  onboardingdialog.h  plugindialog.cpp  plugindialog.h  securitydialog.cpp  securitydialog.h  settingsdialog.cpp  settingsdialog.h  shortcutsdialog.cpp  shortcutsdialog.h  tourwizard.cpp  tourwizard.h  trashrestoredialog.cpp  trashrestoredialog.h
build-linux/: DiskSense.Cli
build-test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-test/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/: mingw64.cmake  warnings.cmake
core/engine/: CMakeLists.txt  engine.cpp  etw_tracing.cpp  etw_tracing.h  iocp.cpp  iocp.h
core/gfx/: CMakeLists.txt  gfx.cpp  treemap.cpp  treemap.h  ui_optimized.cpp  ui_optimized.h
core/index/: CMakeLists.txt  index.cpp  lsm_index.cpp  lsm_index.h  lsm_optimized.cpp  lsm_optimized.h
core/model/: CMakeLists.txt  model.cpp  model.h
core/ops/: CMakeLists.txt  dedupe.cpp  dedupe.h  ops.cpp
core/regcom/: CMakeLists.txt  regcom.cpp
core/rules/: CMakeLists.txt  rules.cpp
core/scan/: CMakeLists.txt  scan.cpp  scanner.cpp  scanner.h
core/usn/: CMakeLists.txt  usn.cpp
core/vss/: CMakeLists.txt  vss.cpp
docs/: BUILD_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  PROJECT_COMPLETION.md  README.md  SAFETY_MODE.md  SECURITY.md  STATUS_REPORT.md  TODO.md  design.md  developer_guide.md
docs/archive/: FINAL_STATUS.md  FINAL_VERIFICATION.md  SUMMARY.md
docs/design/: ops.md
docs/src/: implementation_summary.md  project_structure.md
include/integrations/: yara_bridge.h
libs/audfp/: CMakeLists.txt  audfp.c
libs/carving/: CMakeLists.txt  carving.c  carving.h  signatures.c  signatures.h
libs/chash/: CMakeLists.txt  blake3.c  blake3.h  (+4 more)
libs/clustering/: CMakeLists.txt  algorithms.c  algorithms.h  clustering.c  clustering.h  distance.c  distance.h
libs/compression/: 7z.c  7z.h  CMakeLists.txt  bzip2.c  bzip2.h  compression.c  compression.h  compression_utils.h  formats.c  formats.h  gzip.c  gzip.h  lz4.c  lz4.h  lzma.c  lzma.h  rar.c  rar.h  tar.c  tar.h  xz.c  xz.h  zip.c  zip.h  zstd.c  zstd.h
libs/encryption/: CMakeLists.txt  ciphers.c  ciphers.h  detection.c  detection.h  encryption.c  encryption.h  entropy.c  entropy.h
libs/fuzzyhash/: CMakeLists.txt  fuzzy_hash.c  fuzzy_hash.h  ssdeep.c  ssdeep.h  tlsh.c  tlsh.h
libs/hidden/: CMakeLists.txt  hidden.c  hidden.h  rootkits.c  rootkits.h
libs/logs/: CMakeLists.txt  filters.c  filters.h  logs.c  logs.h  parsers.c  parsers.h
libs/memory/: CMakeLists.txt  analysis.c  analysis.h  dumps.c  dumps.h  memory.c  memory.h  network.c  network.h  processes.c  processes.h
libs/metadata/: CMakeLists.txt  metadata.c  metadata.h
libs/ml/: CMakeLists.txt  classifiers.c  classifiers.h  ml.c  ml.h  ml_features.c  ml_features.h  ml_internal.h  models.c  models.h  training.c  training.h
libs/mount/: CMakeLists.txt  image_formats.c  image_formats.h  mount.c  mount.h
libs/network/: CMakeLists.txt  analysis.c  analysis.h  capture.c  capture.h  network.c  network.h  protocols.c  protocols.h
libs/security/: CMakeLists.txt  audit.c  audit.h  permissions.c  permissions.h  policies.c  policies.h  security.c  security.h  vulnerabilities.c  vulnerabilities.h
libs/slack/: CMakeLists.txt  filesystem.c  filesystem.h  slack.c  slack.h
libs/yara/: CMakeLists.txt  rules.c  rules.h  scanner.c  scanner.h  yara.c  yara.h
platform/: CMakeLists.txt  i18n.cpp  i18n.h  platformmanager.cpp  platformmanager.h  translations.qrc.in
platform/fs/: enumerator.cpp  enumerator.h
platform/fswin/: CMakeLists.txt  file_handle.h  fswin.cpp
platform/io/: file_stream.cpp  file_stream.h  iocp.cpp  iocp.h
platform/util/: CMakeLists.txt  trash.cpp  trash.h  util.cpp
res/: app.manifest
scripts/: build_and_test.sh  build_manual.sh  generate_translations.sh  test_cli.sh
tests/: CMakeLists.txt
tests/perf/: CMakeLists.txt  benchmark.cpp  benchmark.h
tests/unit/: CMakeLists.txt  test_file_utils.cpp  test_sha256.cpp  test_utils.cpp  testmain.cpp  testmain.h
tests/unit/carving/: test_carving.cpp
tests/unit/clustering/: test_clustering.cpp
tests/unit/compression/: test_compression.cpp
tests/unit/encryption/: test_encryption.cpp
tests/unit/fuzzyhash/: test_fuzzy_hash.cpp
tests/unit/hidden/: test_hidden.cpp
tests/unit/logs/: test_logs.cpp
tests/unit/memory/: test_memory.cpp
tests/unit/metadata/: test_metadata.cpp
tests/unit/ml/: test_ml.cpp
tests/unit/mount/: test_mount.cpp
tests/unit/network/: test_network.cpp
tests/unit/ops/: test_dedupe_hash.cpp  test_dedupe_safety.cpp  test_safety.cpp
tests/unit/platform/: test_trash.cpp
tests/unit/scan/: test_inotify.cpp  test_mft.cpp
tests/unit/security/: test_security.cpp
tests/unit/slack/: test_slack.cpp
tests/unit/yara/: test_yara.cpp
translations/: disksense_en.qm  disksense_en.ts  disksense_es.qm  disksense_es.ts
(+53 files in other folders)
